<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/blue_500"
        tools:showIn="@layout/fragment_joke">

        <FrameLayout
            android:id="@+id/error_message_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            app:layout_constraintBottom_toTopOf="@id/retry_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="@dimen/cloud_image_width"
                android:layout_height="@dimen/cloud_image_height"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="@string/explosion_image_description"
                android:src="@drawable/ic_cloud" />

            <TextView
                android:id="@+id/error_text"
                style="@style/errorTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:fontFamily="@font/nice_sugar_font_family"
                android:maxLines="2"
                android:text="@string/error_message_text" />
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/retry_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message_container">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/retry_button"
                android:layout_width="@dimen/default_button_size"
                android:layout_height="@dimen/default_button_size"
                android:background="@drawable/retry_button"
                android:contentDescription="@string/retry_button_description" />

            <TextView
                android:id="@+id/retry_button_text"
                style="@style/buttonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/retry_button_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
