<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/setup_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_large"
        android:clipToPadding="false"
        tools:background="@color/blue_500"
        tools:showIn="@layout/fragment_joke">

        <TextView
            android:id="@+id/setup_text"
            style="@style/jokeTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/question_mark_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="What did the ocean say to the beach?" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/question_mark_button"
            android:layout_width="@dimen/default_button_size"
            android:layout_height="@dimen/default_button_size"
            android:background="@drawable/question_mark_button"
            android:contentDescription="@string/question_mark_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
